# sponsor-desk-data

./: .gitignore  LICENSE  README.md  generate.py  pyproject.toml
data/: CHECKSUMS.txt  labrujula.sqlite  pricing_reference.md
data/csv/: articles.csv  authors.csv  campaign_articles.csv  newsletter_sends.csv  newsletter_subscribers.csv  past_campaigns.csv
lib/: audience.py  campaigns.py  config.py  csv_export.py  newsletter.py  outlet.py  sponsors.py  verify.py  vocab.py
lib/sponsors_new/: _existing_leadership.py  bull_run_cider.py  cascadia_outfitters_coop.py  lewis_clark_foundation.py  meyer_northwest_trust.py  onpoint_cooperative.py  pacific_northwest_health.py  pacific_tower_development.py  portland_museum_of_art.py  reed_college_press.py  travel_oregon.py
sponsors/bancolombia-verde/: brand_priorities_2026.md  past_media_partnerships.md  profile.md
sponsors/bull-run-cider/: brand_priorities_2026.md  leadership.md  profile.md
sponsors/cascadia-credit-union/: brand_priorities_2026.md  leadership.md  past_media_partnerships.md  profile.md
sponsors/cascadia-outfitters-coop/: brand_priorities_2026.md  leadership.md  profile.md
sponsors/fundacion-andes/: brand_priorities_2026.md  past_media_partnerships.md  profile.md
sponsors/grupo-exito-cafe/: brand_priorities_2026.md  past_media_partnerships.md  profile.md
sponsors/lewis-clark-foundation/: brand_priorities_2026.md  leadership.md  profile.md
sponsors/meyer-northwest-trust/: brand_priorities_2026.md  leadership.md  profile.md
sponsors/movimed-colombia/: brand_priorities_2026.md  profile.md  (+1 more)
(+92 files in other folders)
